src/McProtoNet/SourceGenerator/minecraft-packets/data/pc/1.19/README.md
<details><summary>Collected (64)</summary>
<p>

| Packet |
| --- |
| login |
| custom_payload |
| difficulty |
| abilities |
| held_item_slot |
| declare_recipes |
| tags |
| entity_status |
| declare_commands |
| unlock_recipes |
| position |
| player_info |
| update_view_position |
| map_chunk |
| spawn_entity |
| entity_metadata |
| entity_update_attributes |
| entity_velocity |
| initialize_world_border |
| update_time |
| spawn_position |
| server_data |
| window_items |
| update_health |
| experience |
| advancements |
| entity_equipment |
| block_change |
| multi_block_change |
| entity_move_look |
| entity_head_rotation |
| rel_entity_move |
| world_event |
| update_light |
| entity_teleport |
| entity_look |
| entity_destroy |
| system_chat |
| named_entity_spawn |
| tab_complete |
| player_chat |
| death_combat_event |
| respawn |
| game_state_change |
| sound_effect |
| set_slot |
| set_cooldown |
| acknowledge_player_digging |
| entity_sound_effect |
| map |
| set_title_text |
| keep_alive |
| scoreboard_objective |
| scoreboard_display_objective |
| scoreboard_score |
| named_sound_effect |
| entity_effect |
| remove_entity_effect |
| open_window |
| craft_progress_bar |
| close_window |
| boss_bar |
| collect |
| statistics |

</p>
</details>
<details><summary>Missing (41)</summary>
<p>

| Packet |
| --- |
| spawn_entity_experience_orb |
| animation |
| block_break_animation |
| tile_entity_data |
| block_action |
| chat_preview |
| face_player |
| nbt_query_response |
| kick_disconnect |
| explosion |
| unload_chunk |
| open_horse_window |
| world_particles |
| trade_list |
| vehicle_move |
| open_book |
| open_sign_entity |
| craft_recipe_response |
| end_combat_event |
| enter_combat_event |
| resource_pack_send |
| camera |
| update_view_distance |
| should_display_chat_preview |
| attach_entity |
| set_passengers |
| teams |
| stop_sound |
| playerlist_header |
| select_advancement_tab |
| clear_titles |
| action_bar |
| world_border_center |
| world_border_lerp_size |
| world_border_size |
| world_border_warning_delay |
| world_border_warning_reach |
| ping |
| set_title_subtitle |
| set_title_time |
| simulation_distance |

</p>
</details>