src/McProtoNet/SourceGenerator/minecraft-packets/data/pc/1.19.4/README.md
<details><summary>Collected (68)</summary>
<p>

| Packet |
| --- |
| login |
| feature_flags |
| custom_payload |
| difficulty |
| abilities |
| held_item_slot |
| declare_recipes |
| tags |
| entity_status |
| declare_commands |
| unlock_recipes |
| position |
| server_data |
| player_info |
| initialize_world_border |
| update_time |
| spawn_position |
| update_view_position |
| map_chunk |
| bundle_delimiter |
| spawn_entity |
| entity_metadata |
| entity_update_attributes |
| window_items |
| advancements |
| update_health |
| experience |
| entity_equipment |
| multi_block_change |
| block_change |
| entity_head_rotation |
| entity_velocity |
| rel_entity_move |
| entity_move_look |
| world_event |
| entity_look |
| entity_teleport |
| update_light |
| set_passengers |
| entity_destroy |
| system_chat |
| named_entity_spawn |
| player_remove |
| tab_complete |
| player_chat |
| damage_event |
| death_combat_event |
| respawn |
| game_state_change |
| sound_effect |
| set_slot |
| set_cooldown |
| acknowledge_player_digging |
| entity_sound_effect |
| map |
| set_title_text |
| keep_alive |
| scoreboard_objective |
| scoreboard_display_objective |
| scoreboard_score |
| entity_effect |
| remove_entity_effect |
| open_window |
| craft_progress_bar |
| close_window |
| boss_bar |
| collect |
| statistics |

</p>
</details>
<details><summary>Missing (43)</summary>
<p>

| Packet |
| --- |
| spawn_entity_experience_orb |
| animation |
| block_break_animation |
| tile_entity_data |
| block_action |
| face_player |
| nbt_query_response |
| chat_suggestions |
| hide_message |
| kick_disconnect |
| profileless_chat |
| explosion |
| unload_chunk |
| open_horse_window |
| world_particles |
| trade_list |
| vehicle_move |
| open_book |
| open_sign_entity |
| craft_recipe_response |
| end_combat_event |
| enter_combat_event |
| resource_pack_send |
| camera |
| update_view_distance |
| attach_entity |
| teams |
| stop_sound |
| playerlist_header |
| select_advancement_tab |
| clear_titles |
| action_bar |
| world_border_center |
| world_border_lerp_size |
| world_border_size |
| world_border_warning_delay |
| world_border_warning_reach |
| ping |
| set_title_subtitle |
| set_title_time |
| simulation_distance |
| chunk_biomes |
| hurt_animation |

</p>
</details>